# CrystalEMU

./: .gitignore  README
cmake/: genrev.cmake
sql/updates/auth_char/: characters_updates_1.sql  characters_updates_3.sql  characters_updates_4.sql
sql/updates/world/: updates_1.sql  updates_10.sql  updates_11.sql  updates_13.sql  updates_14.sql  updates_2.sql  updates_3.sql  updates_4.sql  updates_5.sql  updates_6.sql  updates_7.sql  updates_8.sql  updates_9.sql
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  auth
src/server/game/Chat/: Chat.cpp  Chat.h
src/server/game/Chat/Commands/: Level2.cpp
src/server/game/Entities/Player/: Player.cpp  Player.h
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Scripting/: ScriptLoader.cpp
src/server/game/Spells/: SpellEffects.cpp
src/server/game/World/: World.cpp  World.h
src/server/gameserver/: CMakeLists.txt  Main.cpp  gameserver.conf.dist  gameserver.rc  run-game
src/server/loginserver/: CMakeLists.txt  loginserver.rc  run-login
src/server/logon/: CMakeLists.txt  Main.cpp  logon.conf.dist  logon.rc
src/server/realm/: CMakeLists.txt  Master.cpp  realm.conf.dist  realm.rc
src/server/scripts/Commands/: CMakeLists.txt  cs_gm.cpp  cs_modify.cpp  cs_player.cpp  cs_tele.cpp
src/server/scripts/Custom/: CMakeLists.txt  guildmaster.cpp
src/server/shared/: SystemConfig.h
src/server/worldserver/: CMakeLists.txt  world  worldserver.conf.dist
